--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <script src="https://unpkg.com/htmlincludejs"></script>
+        <!-- <script src="https://unpkg.com/htmlincludejs"></script> -->
     </head>
 
     <body>
@@ -18,7 +18,9 @@
             <!-- <include src="/components/header/header.html"></include> -->
             <include src="/components/header/header.html"></include>
             <include src="/pages/landing/landing.html"></include>
+            <include src="/components/footer/footer.html"></include>
         </div>
+
         <script src="index.js">
         </script>
     </body>
