--- a/pages/landing/landing.html
+++ b/pages/landing/landing.html
@@ -5,36 +5,167 @@
         <a href="#!" class="btn-primary">See our works</a>
     </div>
 
-   <div class="box2">
-    <div class="container__box">
-        <div class="content">
-            <h2>Who we are</h2>
-            <p class="heading__subtitle">We create products that have innovation and technology at their core. <br />We
-                value working with talented
-                people
-                that understand the possibilities of today.
-            </p>
-            <img src="/assets/img/question-mark.svg" class="icon">
-            <div class="grid-container">
-                <div class="grid-item">
-                    <p class="heading__subtitle">01</p>
-                    <p class="heading__subtitle__second">We develop innovative
-                        products, systems and
-                        services</p>
-                </div>
-                <div class="grid-item">
-                    <p class="heading__subtitle num">02</p>
-                    <p class="heading__subtitle__second num">Next we build teams to scale them into companies
-                    </p>
-                </div>
-                <div class="grid-item">
-                    <p class="heading__subtitle ">03</p>
-                    <p class="heading__subtitle__second">Each startup solving one problem
-                        at a time</p>
+    <div class="box2">
+        <div class="container__box">
+            <div class="content">
+                <h2>Who we are</h2>
+                <p class="heading__subtitle">We create products that have innovation and technology at their core.
+                    <br class="break" />We
+                    value working with talented
+                    people
+                    that understand the possibilities of today.
+                </p>
+                <img src="/assets/img/question-mark.svg" class="icon">
+                <div class="grid-container">
+                    <div class="grid-item">
+                        <p class="heading__subtitle num">01</p>
+                        <p class="heading__subtitle__second">We develop innovative
+                            products, systems and
+                            services</p>
+                    </div>
+                    <div class="grid-item">
+                        <p class="heading__subtitle num">02</p>
+                        <p class="heading__subtitle__second num">Talent is what enable us to create great companies.
+                        </p>
+                    </div>
+                    <div class="grid-item">
+                        <p class="heading__subtitle num">03</p>
+                        <p class="heading__subtitle__second">Each startup solving one problem at a time</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-   </div>
+    <div class="box3">
+        <div class="container__box__holder">
+            <div class="content container__box__internal">
+                <div class="solving__problems">
+                    <img src="/assets/img/Untitled_Artwork 12 1.png" class="hand">
+                    <h3>We love solving problems!</h3>
+                    <img src="/assets/img/hand.png" class="hand">
+                </div>
+                <div class="icon__person">
+                    <a href="#!"><img src="/assets/img/x.png" alt=""></a>
+                    <img src="/assets/img/Group 33.png" id="personPopup">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="box4">
+        <div class="container__box">
+            <div class="content">
+                <h2>Our core values</h2>
+                <img src="/assets/img/lamb.svg" class="icon">
+                <div class="grid-container">
+                    <div class="grid-item">
+                        <p class="heading__subtitle num">01. Innovation</p>
+                        <hr />
+                        <p class="heading__subtitle__second">Startupz operates where entrepreneurship <br>
+                            and technology intersect. We design solutions and turn them into businesses models.</p>
+                    </div>
+                    <div class="grid-item">
+                        <p class="heading__subtitle num">02. People</p>
+                        <hr />
+                        <p class="heading__subtitle__second num">Talent is what enable us to create great companies.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container__box">
+        <div class="our__work">
+            <h2 class="Work__heading">Our work</h2>
+            <div class="Work__rrow1">
+                <div class="grid_our__work">
+                    <p class="heading__subtitle_ourWork green">Tolq</p>
+                    <p class="heading__subtitle__second_ourWork">Tolq is the translation solution built for e-commerce.
+                        It provides all pieces of the localization puzzle in one single integrated solution.</p>
+                    <div class="work-img">
+                        <img src="/assets/img/Tolq.png" class="our__work__img" />
+                    </div>
+                    <a href="!#" class="btn-secondary">More</a>
 
+                </div>
+                <div class=" grid_our__work">
+                    <p class="heading__subtitle_ourWork skyblue">Feedback Labs</p>
+                    <p class="heading__subtitle__second_ourWork">Feedback Labs turns feedback into actionable insights
+                        <br>
+                        for your team.
+                    </p>
+                    <div class="work-img">
+                        <img src="/assets/img/feedback-labs.png" class="our__work__img" />
+                    </div>
+                    <a href="!#" class="btn-secondary">More</a>
+                </div>
+
+
+            </div>
+            <div class="Work__rrow2">
+                <div class="grid_our__work">
+                    <p class="heading__subtitle_ourWork blue">Codekeeper</p>
+                    <p class="heading__subtitle__second_ourWork">Codekeeper is an all-in-one solution for software
+                        developers and publishers to provide source code escrow as part of
+                        service level and license agreements.</p>
+                    <div class="work-img">
+                        <img src="/assets/img/coodkeeper.png" class="our__work__img" />
+                    </div>
+                    <a href="!#" class="btn-secondary">More</a>
+                </div>
+                <div class="grid-item grid_our__work">
+                    <p class="heading__subtitle_ourWork purple">LegalSite</p>
+                    <p class="heading__subtitle__second_ourWork">Protected against legal risks, privacy compliant
+                        and<br> always up-to-date with the latest regulatory <br>developments.</p>
+                    <div class="work-img">
+                        <img src="/assets/img/LegalSite.png" class="our__work__img" />
+                    </div>
+                    <a href="!#" class="btn-secondary">More</a>
+                </div>
+            </div>
+
+        </div>
+        <div class="box5">
+            <div class="container__box__internal">
+                <div class="content">
+                    <div class="solving__problems">
+                        <img src="/assets/img/Untitled_Artwork 12 1.png">
+                        <h3>Startups create a world that actually is better. <br class="break">
+                            Any problem that can be solved, will be solved <br class="break"> by a startup, and that is
+                            a huge
+                            opportunity.
+                        </h3>
+                        <img src="/assets/img/hand.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-box hiring__holder">
+        <img src="/assets/img/left_Artwork.png" alt="" class="hiring__img">
+        <div class="hiring__section">
+            <h2>We are hiring!</h2>
+            <p>We're always looking for talented people <br class="break">to join and help build our startups. <br
+                    class="break">
+                Check out our current openings</p>
+            <a href="#!" class="btn-primary">See current openings</a>
+        </div>
+        <img src="/assets/img/right_Artwork 5.png" alt="" class="hiring__img">
+    </div>
+    <div class="form__section__holder">
+        <div class="container__box ">
+            <div class="form__section">
+                <h2>Are you ready <br />to board this rocket ship?</h2>
+                <p>Share your excitement with us.</p>
+                <form>
+                    <input type="text" placeholder="Name *" class="form-control input-control">
+                    <input type="text" placeholder="Email *" class="form-control input-control">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message *"
+                        class="form-control textarea-control"></textarea>
+                    <div class="form-btn">
+                        <button class="btn-grey">Shoot us a message</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
